package Dominio;

public class Cliente extends Persona {
	
	
	public Cliente(int id, String nombre, String telefono, String correo) {
		super(id, nombre, telefono, correo);
		
	}
	
	
}
