package Dominio;

public class Servicio {
	private int idServicio;
	private String nombre;
	private double precio;
	
	
	public Servicio(int idServicio, String nombre, double precio) {
		this.idServicio = idServicio;
		this.nombre = nombre;
		this.precio = precio;
		
	}
	
	public int getIdServicio() {
		return idServicio;
	}
	
	public String getNombre() {
		return nombre;
	}
	
	public double getPrecio() {
		return precio;
	}
	

	
	
	
	
	
	public void agregarServicio() {
		
	}
	
	public void editarServicio() {
		
	}
	
	public void consultarPrecio() {
		
	}
	
}
