package Dominio;

public interface Usuario {

	public void registrar();
	public void actualizarDatos();
}
