@startuml
title Diagrama de Clases - Aplicación Barbería

left to right direction
' === Paquete de Interfaz (UI / Presentación) ===
package "Interfaz" {

	class PantallaAdmin {
	+ MostrarEmpleados() : void
	+ RegistrarEmpleados() : void
	+ EliminarEmpleados() : void
	}
	
	

    class PantallaPrincipal {
        + mostrarMenu(): void
        + mostrarVentanas() : void
    }

    class PanelGestionCitasUI {
        + mostrarCitas(): void
        + crearCita(): void
        + cancelarCita(): void
    }

    class PanelGestionClientesUI {
        + registrarCliente(): void
        + mostrarClientes(): void
    }

    class PanelGestionPagosUI {
        + procesarPago(): void
        + mostrarHistorialPagos(): void
    }

    class Login {
    + verificarRol() : void
    + iniciarSesion() : void
}
}

' === Paquete de Dominio / Lógica ===
package "Dominio" {

    abstract class Persona {
        - id: int
        - nombre: String
        - telefono: String
        - correo: String
        
    }

    class Cliente {}

    class Barbero {
   		- turno : String 
        - horarios : ArrayList
        - bototnes : ArrayList
        + asignarCita(): void
        + actualizarDisponibilidad(): void
        + mostrarHorarios(): void
    }
    
    interface Usuario {
    
    + registrar(): void
    + actualizarDatos(): void
}

	abstract class UsuarioBase extends Persona {
	- user : String
	- contraseña : String
	- rol : String
	}
    
    class UsuarioRegular extends UsuarioBase implements Usuario {
    }
    
    class Admin extends UsuarioBase implements Usuario {}


    class Cita {
        - idCita: int
        - fecha: Date
        - hora: String
        - estado: String
        + agendarCita(): void
        + cancelarCita(): void
        + actualizarEstado(): void
    }

    class Servicio {
        - idServicio: int
        - nombre: String
        - precio: double
        - duracion: int
        + agregarServicio(): void
        + editarServicio(): void
        + consultarPrecio(): double
    }

    class Pago {
        - idPago: int
        - monto: double
        - metodoPago: String
        - fechaPago: Date
        + registrarPago(): void
        + consultarPago(): void
    }

    ' Herencia
    Persona <|-- Cliente
    Persona <|-- Barbero
}

' === Paquete de Persistencia / Datos ===
package "Base de Datos" as bd {
    class Conectar {
        + conexion(): void
     
    }
    
    class ConsultarDatos {
    + obtenerBarberos() : Arraylist
    + obtenerClientes() : Arraylist
    + obtenerUsuarios() : Arraylist
    + cargarCitas() : DefaultTableModel
    + obtenerPagos() : Arraylist
    + horaOcupada() : boolean
    
    }
    
    class GuardarDatos {
    + guardarBarbero() : boolean
    + guardarUsuario() : boolean
    + guardarCliente() : boolean
    + guardarCita() : boolean
    + guardarPago() : boolean
    + actualizarUsuario() : boolean
    + actualizarBarbero() : boolean
    + eliminarDato() : void
    
    }
}

' === Relaciones internas ===
Cliente  --  Cita 
Barbero  --  Cita 
Cita  --  Pago 
Cita  --  Servicio  


' === Relaciones entre paquetes ===
PanelGestionClientesUI --> Cliente 
PanelGestionCitasUI --> Cita 
PanelGestionPagosUI --> Pago 
Dominio --> bd
Login --> Usuario
@enduml
